--- a/app/src/main/res/layout/account_item.xml
+++ b/app/src/main/res/layout/account_item.xml
@@ -3,7 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="12dp">
+    android:layout_marginTop="6dp"
+    android:layout_marginStart="12dp"
+    android:layout_marginEnd="12dp"
+    app:layout_goneMarginTop="6dp"
+    android:layout_marginBottom="6dp"
+    android:elevation="32dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -13,18 +18,18 @@
 
         <TextView
             android:id="@+id/account_name"
-            android:textSize="20sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="sampleText" />
+            android:text="@string/default_account_name"
+            android:textSize="20sp" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/delete_account"
             style="?attr/borderlessButtonStyle"
-            android:layout_below="@id/account_name"
-            android:layout_alignRight="@id/account_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@id/account_name"
+            android:layout_alignEnd="@id/account_name"
             android:text="DELETE" />
 
     </RelativeLayout>
