--- a/app/src/main/res/layout/transaction_item.xml
+++ b/app/src/main/res/layout/transaction_item.xml
@@ -11,12 +11,20 @@
         android:padding="16dp"
         android:text="hei" />
 
+    <TextView
+        android:id="@+id/transaction_amount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:text="30$"
+        android:padding="16dp" />
+
     <com.google.android.material.divider.MaterialDivider
         android:layout_below="@id/transaction_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:dividerInsetEnd="16dp"
-        app:dividerInsetStart="16dp" />
+        app:dividerInsetEnd="20dp"
+        app:dividerInsetStart="32dp" />
 
 
 </RelativeLayout>
