--- a/app/src/main/res/layout/account_item.xml
+++ b/app/src/main/res/layout/account_item.xml
@@ -32,6 +32,19 @@
             android:layout_alignEnd="@id/account_name"
             android:text="DELETE" />
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/share_account"
+            style="?attr/materialButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/account_name"
+            android:layout_alignBottom="@+id/delete_account"
+            android:layout_marginTop="-1dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginBottom="1dp"
+            android:layout_toStartOf="@+id/delete_account"
+            android:text="share" />
+
     </RelativeLayout>
 
 </com.google.android.material.card.MaterialCardView>
