--- a/app/src/main/res/layout/fragment_transaction_page.xml
+++ b/app/src/main/res/layout/fragment_transaction_page.xml
@@ -6,64 +6,67 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".transaction_page">
 
-    <TextView
-        android:id="@+id/transaction_name"
-        android:layout_width="wrap_content"
+    <ImageView
+        android:id="@+id/optional_image"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/transaction_name"
+        style="?attr/textAppearanceSubtitle2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
         android:text="Transaction name"
         android:textSize="24sp"
-        android:layout_margin="16dp"/>
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@id/optional_image" />
 
     <TextView
         android:id="@+id/transaction_date"
+        style="?attr/textAppearanceBody2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/transaction_name"
-        android:text="12/12/2012"
-        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="20dp"
-        android:layout_marginTop="8dp"
-        android:textSize="16sp" />
+        android:text="12/12/2012"
+        android:textSize="16sp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/transaction_name" />
 
     <TextView
         android:id="@+id/transaction_amount_conv"
+        style="?attr/textAppearanceBody1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:text="You spent/received 20$"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/transaction_date" />
-
-    <com.google.android.material.divider.MaterialDivider
-        android:id="@+id/materialDivider"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginLeft="20dp"
-        app:layout_constraintTop_toBottomOf="@id/transaction_amount_conv" />
 
     <TextView
         android:id="@+id/transaction_category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        android:text="It has category of SelfCare"
+        android:layout_marginTop="12dp"
+        android:text="Category: Things"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/materialDivider" />
+        app:layout_constraintTop_toBottomOf="@+id/transaction_amount_conv" />
 
-    <TextView
+    <Button
+        android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="Spending of SelfCare over the last"
-        android:textSize="20sp"
+        android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/transaction_category" />
 
