Started working on bottom sheet and heavy refractoring

--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -32,5 +32,16 @@
         app:defaultNavHost="true"
         app:navGraph="@navigation/nav_graph" />
 
+    
+
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/activity_coordinator"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+
+
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
