--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,26 +22,39 @@
     </HorizontalScrollView>
 
 
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/transactions_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/filter_view"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/filter_view"
         tools:itemCount="3"
         tools:listitem="@layout/transaction_item" />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/go_to_accounts"
+    <TextView
+        android:id="@+id/go_right_text"
+        style="?attr/textAppearanceHeadline4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Go to account page"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="@string/need_account"
+        app:layout_constraintBottom_toBottomOf="@+id/transactions_list"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/filter_view"
+         />
+
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/go_to_accounts"
+        android:layout_marginTop="8dp"
+        android:visibility="invisible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_go_right"
+        app:layout_constraintTop_toBottomOf="@id/go_right_text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:contentDescription="@string/go_right" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
