--- a/app/src/main/res/layout/fragment_stats.xml
+++ b/app/src/main/res/layout/fragment_stats.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,25 +8,53 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.stats.StatsFragment">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-
-
-        <com.github.mikephil.charting.charts.PieChart
-            android:id="@+id/category_chart"
+        android:layout_height="match_parent" >
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="400dp"
-            android:layout_margin="8dp" />
+            android:layout_height="wrap_content" >
 
 
-        <com.github.mikephil.charting.charts.LineChart
-            android:layout_marginTop="20dp"
-            android:id="@+id/account_chart"
-            android:layout_width="match_parent"
-            android:layout_height="400dp" />
+            <com.github.mikephil.charting.charts.PieChart
+                app:layout_constraintTop_toTopOf="parent"
+                android:id="@+id/category_chart"
+                android:layout_width="match_parent"
+                android:layout_height="400dp"
+                android:layout_margin="8dp" />
 
-    </LinearLayout>
+            <com.github.mikephil.charting.charts.LineChart
+                app:layout_constraintTop_toBottomOf="@id/category_chart"
+                android:id="@+id/account_chart"
+                android:layout_width="match_parent"
+                android:layout_height="400dp" />
 
-</ScrollView>
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
+
+
+    <TextView
+        android:id="@+id/go_right_text"
+        style="?attr/textAppearanceHeadline4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/need_account"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        />
+
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/go_to_accounts"
+        android:layout_marginTop="8dp"
+        android:visibility="invisible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_go_right"
+        android:layout_below="@id/go_right_text"
+        android:layout_centerHorizontal="true"
+        android:contentDescription="@string/go_right" />
+
+</RelativeLayout>
