--- a/app/src/main/res/layout/account_item.xml
+++ b/app/src/main/res/layout/account_item.xml
@@ -38,6 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/account_name"
+            android:layout_alignBaseline="@id/delete_account"
             android:layout_alignBottom="@+id/delete_account"
             android:layout_marginTop="-1dp"
             android:layout_marginEnd="4dp"
