--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -5,6 +5,6 @@
     <item
         android:id="@+id/action_logout"
         app:showAsAction="always"
-        android:title="Logout" />
+        android:title="@string/logout" />
 
 </menu>
